# azure-sdk-for-c-samples

./: CMakeLists.txt  LICENSE  README.md
cmake-modules/: AddAzureSDK.cmake  AddAzureSDKforC.cmake
filesRepository/: fortyMb
helloAzure/: CMakeLists.txt
helloAzure/src/: main.c
helloAzureFromCpp/: CMakeLists.txt
helloAzureFromCpp/src/: main.cpp
poorManLibCurl/: CMakeLists.txt
poorManLibCurl/src/: main.cpp
